# extrablatt_v2

./: .gitignore  Cargo.toml  README.md
benches/: article_parsing.rs
extrablatt-web/: Cargo.toml
extrablatt-web/src/: lib.rs
src/: article.rs  category.rs  date.rs  error.rs  extrablatt.rs  extract.rs  extract_authors.rs  extract_base_url.rs  extract_canonical.rs  extract_favicon.rs  extract_meta.rs  extract_meta_data.rs  extract_meta_language.rs  extract_node.rs  extract_pb_date.rs  extract_thumbnail.rs  extract_title.rs  extract_top_img.rs  extract_urls.rs  extract_videos.rs  language.rs  lib.rs  main.rs  proxy.rs  stopwords.rs  text.rs
